[package]
name = "simple-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "2.6"
nix = { version = "0.26", features = ["fs"] }
futures = "0.3"
scoped-tls = "1"
waker-fn = "1.1"
socket2 = "0.5"
